apps/tools/n8n/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-internal
  labels:
    app: n8n-server
spec:
  ports:
    - name: web
      port: 80
      targetPort: 5678
      protocol: TCP
  selector:
    app: n8n-server
  type: ClusterIP
