apps/tools/n8n/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.jamies.cloud
    external-dns.alpha.kubernetes.io/target: 192.168.8.119
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: n8n.jamies.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-internal
                port:
                  name: web
  tls:
    - hosts:
        - n8n.jamies.cloud
      secretName: n8n-tls
